correct spacing (#1388)

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -1520,11 +1520,14 @@ adv-filters {
   .section.row {
     margin: 0.5% 0.5% 0.5% 0.5%;
   }
+  .block-children > sb-radio-button-group {
+    margin-bottom: 10px;
+  }
 }
 
 table.student-claim-distribution {
   table-layout: fixed;
-  
+
   thead {
     tr {
       th {
